--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ structlog = "^24.1.0"
 huggingface-hub = "^0.23.0"
 unstructured = {extras = ["pdf"], version = "^0.13.7"}
 lxml = "^5.2.2"
+djangorestframework = "^3.15.1"
+adrf = "^0.1.6"
+uvicorn = "^0.30.1"
+typedload = "^2.33"
 
 [tool.poetry.scripts]
 legisdata = 'legisdata.main:app'
