--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,12 @@ huggingface-hub = "^0.23.0"
 unstructured = {extras = ["pdf"], version = "^0.13.7"}
 lxml = "^5.2.2"
 djangorestframework = "^3.15.1"
-adrf = "^0.1.6"
-uvicorn = "^0.30.1"
 typedload = "^2.33"
+psycopg2-binary = "^2.9.9"
+django-structlog = "^8.1.0"
+django-typer = {extras = ["rich"], version = "^2.1.2"}
+gunicorn = "^22.0.0"
+drf-flex-fields = "^1.0.2"
 
 [tool.poetry.scripts]
 legisdata = 'legisdata.main:app'
