--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "legisdata", from = "src"}, {include="legisweb", from = "
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-django = "^5.0.4"
+django = "^5.0.7"
 django-dotenv = "^1.4.2"
 huggingface-hub = {extras = ["cli"], version = "^0.23.4"}
 djangorestframework = "^3.15.1"
@@ -18,6 +18,7 @@ django-structlog = "^8.1.0"
 django-typer = {extras = ["rich"], version = "^2.1.2"}
 gunicorn = "^22.0.0"
 drf-flex-fields = "^1.0.2"
+django-opensearch-dsl = "^0.6.2"
 
 [tool.poetry.scripts]
 legisdata = 'legisdata.main:app'
@@ -26,7 +27,7 @@ legisdata = 'legisdata.main:app'
 ipdb = "^0.13.13"
 
 [tool.poetry.group.cli.dependencies]
-requests = "^2.31.0"
+requests = "^2.32.3"
 typer = "^0.12.3"
 structlog = "^24.1.0"
 unstructured = {extras = ["pdf"], version = "^0.13.7"}
